# Aura-Desktop

./: .gitignore  README.md  TODO.md  mockui.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: release.yml
aura-core/: Cargo.toml  README.md
aura-core/src/: config.rs  downloader.rs  lib.rs  logging.rs  manager.rs  models.rs  scraper.rs
aura-core/tests/: integration_test.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: STATUS.md  UPDATER_SETUP.md  VERSIONING.md
i18n/: index.ts
i18n/locales/: en.json  si.json
scraper-lib/: Cargo.toml
scraper-lib/src/: client.rs  lib.rs  models.rs  parser.rs
scripts/: sync-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FullPageLoader.tsx  GridView.tsx  ListView.tsx  Loader.tsx  NewView.tsx  PopularView.tsx  ProjectSettings.tsx  TranslationManager.tsx  WelcomeScreen.tsx
src/components/AuraLoader/: index.tsx
src/components/BottomNavBar/: index.tsx
src/components/DetailsView/: index.tsx
src/components/DownloadsView/: index.tsx
src/components/HomeView/: AnimeCarousel.tsx  index.tsx
src/components/Loader/: index.tsx
src/components/SearchView/: index.tsx
src/components/SettingsView/: index.tsx
src/components/Sidebar/: index.tsx
src/components/TopBar/: index.tsx
src/components/common/: MarshmallowLoader.css  MarshmallowLoader.tsx
src/components/layout/: BottomNavBar.tsx
src/components/layout/Sidebar/: index.tsx
src/hooks/: use-responsive.ts  usePlatform.ts
src/layouts/: AppLayout.tsx  DesktopLayout.tsx  MobileLayout.tsx
src/lib/: utils.ts
src/lib/api/: anime.ts  downloads.ts  health.ts  index.ts  settings.ts  tauri.ts  types.ts
