[package]
name = "aura-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
scraper = "0.17"
regex = "1"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
