[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aura-cli"
path = "src/main.rs"

[dependencies]
aura-core = { path = "../aura-core" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
dialoguer = "0.11"
console = "0.15"
uuid = { version = "1.0", features = ["v4"] }
textwrap = "0.16"