[package]
name = "anime-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["cookies", "json", "rustls-tls"], default-features = false }
scraper = "0.17"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.4"
regex = "1.9"
lazy_static = "1.4"