[package]
name = "sukunai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "sukunai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-shell = "2.3.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.5.0"
aura-core = { path = "../aura-core" }

# Add this line:
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
tauri-plugin-fs = "2.4.5"
tauri-plugin-os = "2.3.2"
